# date-giver

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  INSTALL  Makefile  Makefile.in  README  TODO  calculate_final.c  calculate_final.h  check.c  check.h  config.h.in  configure  configure.ac  date.c  date.h  input.c  input.h  input_date.c  input_date.h  main.c  readme.md  variables.h
src/: TODO  calculate_final.c  calculate_final.h  date.c  date.h  date_suffix.c  date_suffix.h  input.c  input.h  input_date.c  input_date.h  leap_year.c  leap_year.h  main.c  variables.h
src/headers/: date.h  leap_year.h  variables.h
